--- a/index.html
+++ b/index.html
@@ -1,40 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+  <main>
+    <div class="svg-bg">
+      <img src="./images/illustration-woman-online-mobile.svg" alt="">
+    </div>
+    <div class="faq-container">
+      <div class="faq-header">
+        <h1>FAQ</h1>
+      </div>
+      <div class="faq-questions">
+        <div class="faq-question q1">
+          <p>How many team members can I invite?</p>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </div>
+        <div class="faq-answers a1">
+          <p>You can invite up to 2 additional users on the Free plan. There is no limit on
+            team members for the Premium plan.</p>
+        </div>
+        <div class="faq-question q2">
+          <p>What is the maximum file upload size?</p>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </div>
+        <div class="faq-answers a2">
+          <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+        </div>
+        <div class="faq-question q3">
+          <p>How do I reset my password?</p>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </div>
+        <div class="faq-answers a3">
+          <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.</p>
+        </div>
+        <div class="faq-question q4">
+          <p>Can I cancel my subscription?</p>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </div>
+        <div class="faq-answers a4">
+          <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+        </div>
+        <div class="faq-question q5">
+          <p>Do you provide additional support?</p>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </div>
+        <div class="faq-answers a5">
+          <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+        </div>
+      </div>
+    </div>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+  </main>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="./app.js"></script>
 </body>
+
 </html>
